Add empty values on comboboxes